--- a/esp32_ring/platformio.ini
+++ b/esp32_ring/platformio.ini
@@ -16,5 +16,6 @@ monitor_speed = 115200
 lib_deps =
     ; PqLEDStrip
     https://github.com/SofaPirate/PqLEDStrip.git
-    
+    ; PqOSC
+    https://github.com/SofaPirate/PqOSC.git
 
