--- a/m5atom/platformio.ini
+++ b/m5atom/platformio.ini
@@ -14,7 +14,11 @@ board = m5stack-atom
 framework = arduino
 monitor_speed = 115200
 lib_deps =
-    ; PqLEDStrip
+    ; Plaquette
+    https://github.com/SofaPirate/Plaquette.git#develop
+     ; PqLEDStrip
     https://github.com/SofaPirate/PqLEDStrip.git
-    
-
+    ; PqOSC
+    https://github.com/SofaPirate/PqOSC.git
+    ; PbHub
+   ; https://github.com/thomasfredericks/M5_PbHub.git
